test/tests/compiler/11_long_integers/invalid_types/call_long_as_function.plx
pub fn x(none) i64;

pub fn main(none) i32 {
    x: i64 = 0
    #  x isn't a function, so you can't call it 
    return x()
}
